start work on making it a random chance to scramble per message

--- a/Resources/Prototypes/Traits/speech.yml
+++ b/Resources/Prototypes/Traits/speech.yml
@@ -124,5 +124,4 @@
   cost: 2
   components:
   - type: ConfusedAccent
-    timeBetweenIncidents: 300, 600
-    durationOfIncident: 30, 90
+    chanceToScramble: 0.15
